--- a/src/dune
+++ b/src/dune
@@ -7,7 +7,8 @@
     (pps
       ppx_inline_test
       lwt_ppx
-      tyxml-ppx))
+      tyxml-ppx
+      ppx_deriving.enum))
 	(modules_without_implementation
   )
   (inline_tests))
