--- a/src/dune
+++ b/src/dune
@@ -19,7 +19,7 @@
 	(action (with-stdout-to images_coords.ml (run %{gen}))))
 
 (rule
-	(target all_image.ml)
+	(target bundled_image.ml)
   (deps (:gen ../gen/incl_png.exe) all.png)
 	(action (with-stdout-to %{target} (run %{gen}))))
 
