Début de la version native SDL.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 	"dependencies": {
 		"ocaml": "~4.13",
 		"@opam/dune": "~3.11",
-		"@opam/ocamlfind": "1.9.5",
+		"@opam/ocamlfind": "1.9.3",
+		"@opam/ocamlbuild": "0.14.2",
 		"@opam/js_of_ocaml": "~5.4",
 		"@opam/js_of_ocaml-lwt": "*",
 		"@opam/js_of_ocaml-ppx": "*",
@@ -28,6 +29,7 @@
 		"@opam/js_of_ocaml-tyxml": "*",
 		"@opam/ppx_inline_test": "*",
 		"@opam/imagelib": "*",
-		"@opam/ppx_deriving": "*"
+		"@opam/ppx_deriving": "*",
+		"@opam/ocamlsdl2": "*"
 	}
 }
