--- a/src/dune
+++ b/src/dune
@@ -2,7 +2,7 @@
 (library
  	(public_name potion-pandora)
 	(name potion_pandora)
-	(libraries lwt tyxml imagelib save)
+	(libraries lwt tyxml imagelib potion-pandora.libsave)
 	(preprocess
     (pps
       ppx_inline_test
