Ajout de la dépendance à ppxlib.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
 		"@opam/bigstringaf": "*",
 		"@opam/base64": "*",
 		"@opam/ppx_deriving": "*",
-		"@opam/ocamlsdl2": "*"
+		"@opam/ocamlsdl2": "*",
+		"@opam/ppxlib": "*"
 	},
 	"resolutions": {
 		"@opam/ocamlsdl2": "github:Mbodin/OCamlSDL2#22a4611750636d33a2d89eccfbedec50dcde599d"
