--- a/src/dune
+++ b/src/dune
@@ -7,7 +7,8 @@
     (pps
       ppx_inline_test
       ppx_deriving.enum
-      ppx_deriving.show))
+      ppx_deriving.show
+      potion-pandora.ppx_data))
 	(modules_without_implementation
     interface)
   (inline_tests)
