--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -37,9 +37,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-            
+
       - name: Install dependencies.
-        run: sudo apt install libsdl2-dev pkgconf npm
+        run: sudo apt install -y npm pkgconf libsdl2-2.0-0 libsdl2-dev libsdl2-image-dev
 
       - name: Install esy
         run: npm install -g esy
